Bug 473104 - Pie chart display style is not working
Summary: Pie chart display style is not working
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kquickcharts
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Arjen Hiemstra
URL:
Keywords: qt6, regression
: 473179 473180 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-08-07 11:35 UTC by Patrick Silva
Modified: 2023-08-21 08:36 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (664.13 KB, image/png)
2023-08-07 11:35 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-08-07 11:35:50 UTC
Created attachment 160790 [details]
screenshot

STEPS TO REPRODUCE
1. add "Memory usage" or "Total CPU Use" widget ot desktop
2. 
3. 

OBSERVED RESULT
the added widget has no display style. Please see the attached screenshot.

EXPECTED RESULT
the added widget has pie chart display style


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Patrick Silva 2023-08-07 11:36:51 UTC
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 2 Arjen Hiemstra 2023-08-07 12:50:00 UTC
Anything in the logs?
Comment 3 Nate Graham 2023-08-07 20:31:04 UTC
Can reproduce. This was just working in System Monitor a few days ago; seems like a recent regression.
Comment 4 Patrick Silva 2023-08-08 23:50:05 UTC
*** Bug 473179 has been marked as a duplicate of this bug. ***
Comment 5 Patrick Silva 2023-08-08 23:51:00 UTC
*** Bug 473180 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2023-08-12 03:43:18 UTC
This affects the timeout indicator in notifications too, so it's a regression in KQuickCharts somewhere. I'll bisect.
Comment 7 Nate Graham 2023-08-12 03:46:03 UTC
Found it:

10a038a9b80f68bbebcaecf71ce820ad04b01869 is the first bad commit
commit 10a038a9b80f68bbebcaecf71ce820ad04b01869
Author: Arjen Hiemstra <ahiemstra@heimr.nl>
Date:   Mon Jul 17 14:13:27 2023 +0200

    Use UniformDataStream for writing Pie chart shader data

 src/scenegraph/PieChartMaterial.cpp | 50 ++++++++++++++++---------------------
 1 file changed, 22 insertions(+), 28 deletions(-)
Comment 8 Bug Janitor Service 2023-08-14 12:04:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kquickcharts/-/merge_requests/63
Comment 9 Arjen Hiemstra 2023-08-21 08:36:50 UTC
Git commit 2fd5500c1090bbc5896e86cb8ce7d1d881d94673 by Arjen Hiemstra.
Committed on 14/08/2023 at 14:02.
Pushed by ahiemstra into branch 'master'.

Update alignment calculations in UniformDataStream

Now they properly match the requirements of the std140 layout. Most
importantly, we properly align arrays and send colors as a proper
float4.

M  +54   -28   src/scenegraph/SDFShader.h

https://invent.kde.org/frameworks/kquickcharts/-/commit/2fd5500c1090bbc5896e86cb8ce7d1d881d94673