Update alignment calculations in UniformDataStream

Now they properly match the requirements of the std140 layout. Most
importantly, we properly align arrays and send colors as a proper
float4.

BUG: 473104